--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href=" common.css">
+    <link rel="stylesheet" href="header.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container ">
+            <div class="header">
+                <h2 class="header-logo">
+                    <img src="img/Logo.png" alt="">
+                </h2>
+                <nav>
+                    <ul class="d-flex header-menu">
+                        <li>Studio</li>
+                        <li>Portfolio</li>
+                        <li>Contacts</li>
+                        <li>info@devstudio.com</li>
+                        <li>+11 (000) 111-11-11</li>
+                    </ul>
+            
+                </nav>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
