--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./section3.css" />
+  </head>
+  <body>
+    <section class="section-3 container">
+      <h1 class="tema">What Are We Doing</h1>
+      <div class="flex">
+        <img class="img-1" src="./img/img-master.png" alt="" />
+        <img class="img-2" src="./img/img-master-2.png" alt="" />
+        <img class="img-3" src="./img/img-master-3.png" alt="" />
+      </div>
+    </section>
+  </body>
 </html>
