--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div>
               
                     <h4 class="text">Subscribe</h4>   
-                     <input class="pon" type="text">
+                     <input class="pon" value="E-mail" type="text">
                      <button class="cnopka">Subscribe <i class="bi bi-telegram"></i>
                      </button>
                 </div>
